SSCSFT-102 Rebase master